--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,11 @@
                 <artifactId>curator-x-discovery</artifactId>
                 <version>4.0.1</version>
             </dependency>
+            <dependency>
+                <groupId>cn.huolala.arch.hermes</groupId>
+                <artifactId>hermes-all</artifactId>
+                <version>2.3.1.RELEASE</version>
+            </dependency>
         </dependencies>
 
 
